# haveanidea

./: package-lock.json  readme.md
haveanidea-api/: .env.example  Cargo.toml  README_BACKEND.md
haveanidea-api/migrations/: 001_initial.sql
haveanidea-api/src/: app.rs  db_init.rs  main.rs  router.rs
haveanidea-api/src/models/: idea.rs  mod.rs
haveanidea-api/src/service/: auth.rs  ideas.rs  mod.rs  upload.rs
haveanidea-ui/: package-lock.json  package.json  pnpm-lock.yaml  types.ts
haveanidea-ui/api/: idea.ts  launch.ts
haveanidea-ui/components/: CexCard.tsx  CexsGrid.tsx  Footer.tsx  Header.tsx  IdeaCard.tsx  IdeasGrid.tsx  Layout.tsx  Sidebar.tsx
haveanidea-ui/lib/: api.ts  request.ts
haveanidea-ui/pages/: _app.tsx  about.tsx  dao-governance.tsx  index.tsx  launch.tsx  marketplace.tsx  nft-mint.tsx  presale.tsx  token-sale.tsx  writing.tsx
haveanidea-ui/pages/api/: launch.ts
haveanidea-ui/pages/ideas/: [id].tsx
haveanidea-ui/styles/: globals.css
