[package]
name = "haveanidea-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"], default-features = false }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
futures = "0.3.31"
serde_json = "1.0.145"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
tower = "0.4"
tower-limit = "0.3.1"
aliyun-oss-client = "0.8"
mime = "0.3"
bytes = "1.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
validator = { version = "0.16", features = ["derive"] }
base64ct = "=1.7.1"

 
